<resources>
    <string name="app_name">Account</string>
    <string name="welcome">Welcome !</string>
    <string name="id">ID :</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="first_name_update">First Name</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue !</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user_sign_up">New User ? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name_create">First Name</string>
    <string name="last_name_create">Last Name</string>
    <string name="email_create">Email</string>
    <string name="password_create">Password</string>
    <string name="confirm_password_create">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="last_name_update">Last Name</string>
    <string name="email_update">Email</string>
    <string name="password_update">Password</string>
    <string name="confirm_password_update">Confirm Password</string>
</resources>
