<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="#FFFF"
            android:textSize="40dp"
            android:layout_marginBottom="50dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="#FFFF"
                android:layout_marginRight="20dp"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/wlc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#202020" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="#FFFF"
                android:layout_marginRight="20dp"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/wlc_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#202020" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="#FFFF"
                android:layout_marginRight="20dp"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/wlc_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#202020" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">


            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#FFFF"
                android:layout_marginRight="20dp"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/wlc_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="#202020" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp">


            <TextView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#FFFF"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:textSize="20dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/wlc_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="20dp"
                    android:textColor="#202020"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="30dp"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="30dp"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressBarDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>